bugfix: text wrap

--- a/src/styles/Nav.sass
+++ b/src/styles/Nav.sass
@@ -4,6 +4,6 @@
 .Nav--header
 	font-family: 'East Sea Dokdo', cursive
 	letter-spacing: .1em
-	font-size: 7vmin
+	font-size: 6vmin
 	color: white
 	text-align: center
